change endpoint name and update documentation.
